crates/pyrogen_checker/src/snapshots/pyrogen_checker__type_ignore__tests__noqa_codes_trailing_comment.snap
---
source: crates/pyrogen_checker/src/type_ignore.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..35,
                codes: [
                    "override",
                    "unreachable",
                ],
            },
        ),
    ),
)
