crates/pyrogen_checker/src/snapshots/pyrogen_checker__type_ignore__tests__noqa_empty_bracket.snap
---
source: crates/pyrogen_checker/src/type_ignore.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Err(
    MissingCodes,
)
