crates/pyrogen_checker/src/snapshots/pyrogen_checker__type_ignore__tests__pyrogen_exemption_all_case_insensitive.snap
---
source: crates/pyrogen_checker/src/type_ignore.rs
expression: "ParsedFileExemption::try_extract(source)"
---
Ok(
    Some(
        All,
    ),
)
